--- a/package.json
+++ b/package.json
@@ -11,9 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.131",
     "@mui/material": "^5.13.2",
+    "@mui/x-date-pickers": "^6.5.0",
+    "dayjs": "^1.11.7",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "jodit-react": "^1.3.39",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
